# rust-fun

./: Cargo.toml
bench/: my_benchmark.rs
