[package]
name = "rust-fun"
version = "0.1.0"
authors = ["Krzysztof Kaczor <krzkaczor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "./bench/my_benchmark.rs"
harness = false